@@ -12,5 +12,5 @@ EXTRA_DIST= $(CONFIGURATION_FILES) $(PROJECT_FILE)
 
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(pkgdatadir)
-	$(INSTALL_DATA) $(top_srcdir)/config/$(PROJECT_FILE) $(DESTDIR)$(pkgdatadir)/default-project.jprj
-	$(INSTALL_DATA) $(top_srcdir)/config/@DEFAULT_CONFIG_FILE@ $(DESTDIR)$(pkgdatadir)/default-config.jcfg
+	$(INSTALL_DATA) $(top_srcdir)/config/$(PROJECT_FILE) $(DESTDIR)$(pkgdatadir)/default_project.jprj
+	$(INSTALL_DATA) $(top_srcdir)/config/@DEFAULT_CONFIG_FILE@ $(DESTDIR)$(pkgdatadir)/default_config.jcfg
