@@ -258,5 +258,5 @@ PREDEF_SYMBOL( fts_s_equal, "=")
 PREDEF_SYMBOL( fts_s_args, "args")
 
 /* Default filename */
-PREDEF_SYMBOL( fts_s_default_project, "default-project.jprj")
-PREDEF_SYMBOL( fts_s_default_config, "default-config.jcfg")
+PREDEF_SYMBOL( fts_s_default_project, "default_project.jprj")
+PREDEF_SYMBOL( fts_s_default_config, "default_config.jcfg")
