@@ -25,10 +25,10 @@
 
 extern fts_symbol_t fts_get_default_root_directory( void);
 
-extern fts_symbol_t fts_get_user_project( int create);
+extern fts_symbol_t fts_get_user_project( void);
 extern fts_symbol_t fts_get_system_project( void);
 
-extern fts_symbol_t fts_get_user_configuration( int create);
+extern fts_symbol_t fts_get_user_configuration( void);
 extern fts_symbol_t fts_get_system_configuration(void);
 
 extern fts_status_t fts_load_library( const char *filename, const char *symbol);
